javascript file added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
     <title>
       Test
     </title>
+    <script type="text/javascript" src="assets/js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   </head>
   <body>
-    TEST
+    <div id="content">
+      <div id="firstImage">
+        <a href="javascript:playSound(1)">
+          <img src="assets/img/sippy.png">
+        </a>
+      </div>
+      <div id="secondImage">
+        <a href="javascript:playSound(2)">
+          <img src="assets/img/cheerios.png">
+        </a>
+      </div>
+    </div>
   </body>
 </html>
