--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="content">
-      <div id="firstImage">
+      <div class="spot" id="spot1">
         <a href="javascript:playSound(1)">
-          <img src="assets/img/sippy.png">
+          <img class="image" id="image1" src="assets/img/sippy.png">
         </a>
       </div>
-      <div id="secondImage">
+      <div class="spot" id="spot2">
         <a href="javascript:playSound(2)">
-          <img src="assets/img/cheerios.png">
+          <img class="image" id="image2" src="assets/img/cheerios.png">
         </a>
       </div>
     </div>
