--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
     <title>
       Test
     </title>
-    <script type="text/javascript" src="assets/js/index.js"></script>
+    
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   </head>
   <body>
     <div id="content">
-      <div class="spot" id="spot1">
-        <a href="javascript:playSound(1)">
-          <img class="image" id="image1" src="assets/img/sippy.png">
-        </a>
-      </div>
-      <div class="spot" id="spot2">
-        <a href="javascript:playSound(2)">
-          <img class="image" id="image2" src="assets/img/cheerios.png">
-        </a>
-      </div>
+      <div class="spot" id="spot_0"></div>
+      <div class="spot" id="spot_1"></div>
     </div>
+    <script type="text/javascript" src="assets/js/index.js"></script>
   </body>
 </html>
