--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
     <title>
       Test
     </title>
-    
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>    
   </head>
   <body>
-    <div id="content">
+
+    <div id="setup" class="section">
+      <div id="controls">
+        <center>
+          <div id="imageBoard">
+            <img class="thumbnail selectable selected" src="assets/img/sippy.png">
+            <img class="thumbnail selectable" src="assets/img/cheerios.png">
+            <img class="thumbnail" src="assets/img/plus.png">
+          </div>
+
+          <br>
+
+          <button onclick="start()" type="submit" class="btn btn-primary mb-3">
+            START
+          </button>
+        </center>
+      </div>
+    </div>
+
+    <div id="content" class="section" onclick="onFullscreen()">
       <div class="spot" id="spot_0"></div>
       <div class="spot" id="spot_1"></div>
     </div>
+
     <script type="text/javascript" src="assets/js/index.js"></script>
   </body>
 </html>
