video support added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
     </div>
 
     <div id="content" class="section" onclick="onFullscreen()">
-      <div class="spot" id="spot_0"></div>
-      <div class="spot" id="spot_1"></div>
+      <div id="spotContainer" class="section">
+        <div class="spot" id="spot_0"></div>
+        <div class="spot" id="spot_1"></div>
+      </div>
+      <video id="videoSource">
+        <source src="https://www.carlostoxtli.com/pictogram/assets/videos/green.mp4" type="video/mp4">
+      </video>
     </div>
+
+    
 
     <script type="text/javascript" src="assets/js/index.js"></script>
   </body>
